# Hackfest25-11

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/hearwell3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hearwell3/: AudioTest.kt  Audiogram.kt  Calibrate.kt  GlobalData.kt  HomePage.kt  MainActivity.kt  TestingMain.kt  Translate.kt  UserActivity.kt  UserProfile.kt  type.kt
app/src/main/java/com/example/hearwell3/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
app/src/main/java/com/example/hearwell3/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/com/example/hearwell3/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
app/src/main/java/com/example/hearwell3/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
app/src/main/res/drawable/: ear_left.xml  ear_right.xml  logo.xml
app/src/main/res/layout/: app_bar_home_page.xml  content_home_page.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hearwell3/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
